antlr/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.8


#include "ExprListener.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

ExprParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ProgContext::EOF() {
  return getToken(ExprParser::EOF, 0);
}

std::vector<ExprParser::DeclarationContext *> ExprParser::ProgContext::declaration() {
  return getRuleContexts<ExprParser::DeclarationContext>();
}

ExprParser::DeclarationContext* ExprParser::ProgContext::declaration(size_t i) {
  return getRuleContext<ExprParser::DeclarationContext>(i);
}


size_t ExprParser::ProgContext::getRuleIndex() const {
  return ExprParser::RuleProg;
}

void ExprParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void ExprParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}

ExprParser::ProgContext* ExprParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(34);
      declaration();
      setState(37); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__12)
      | (1ULL << ExprParser::T__13)
      | (1ULL << ExprParser::VAR_TYPE))) != 0));
    setState(39);
    match(ExprParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

ExprParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::ExprContext *> ExprParser::ExprContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::ExprContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}

tree::TerminalNode* ExprParser::ExprContext::NOT() {
  return getToken(ExprParser::NOT, 0);
}

tree::TerminalNode* ExprParser::ExprContext::SUB() {
  return getToken(ExprParser::SUB, 0);
}

ExprParser::Func_callContext* ExprParser::ExprContext::func_call() {
  return getRuleContext<ExprParser::Func_callContext>(0);
}

ExprParser::Array_accessContext* ExprParser::ExprContext::array_access() {
  return getRuleContext<ExprParser::Array_accessContext>(0);
}

tree::TerminalNode* ExprParser::ExprContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::LiteralContext* ExprParser::ExprContext::literal() {
  return getRuleContext<ExprParser::LiteralContext>(0);
}

tree::TerminalNode* ExprParser::ExprContext::DIV() {
  return getToken(ExprParser::DIV, 0);
}

tree::TerminalNode* ExprParser::ExprContext::MUL() {
  return getToken(ExprParser::MUL, 0);
}

tree::TerminalNode* ExprParser::ExprContext::MOD() {
  return getToken(ExprParser::MOD, 0);
}

tree::TerminalNode* ExprParser::ExprContext::ADD() {
  return getToken(ExprParser::ADD, 0);
}

tree::TerminalNode* ExprParser::ExprContext::REL_OP() {
  return getToken(ExprParser::REL_OP, 0);
}

tree::TerminalNode* ExprParser::ExprContext::EQ_OP() {
  return getToken(ExprParser::EQ_OP, 0);
}

tree::TerminalNode* ExprParser::ExprContext::AND() {
  return getToken(ExprParser::AND, 0);
}

tree::TerminalNode* ExprParser::ExprContext::OR() {
  return getToken(ExprParser::OR, 0);
}


size_t ExprParser::ExprContext::getRuleIndex() const {
  return ExprParser::RuleExpr;
}

void ExprParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void ExprParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


ExprParser::ExprContext* ExprParser::expr() {
   return expr(0);
}

ExprParser::ExprContext* ExprParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ExprParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  ExprParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, ExprParser::RuleExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(54);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(42);
      match(ExprParser::T__0);
      setState(43);
      expr(0);
      setState(44);
      match(ExprParser::T__1);
      break;
    }

    case 2: {
      setState(46);
      match(ExprParser::NOT);
      setState(47);
      expr(13);
      break;
    }

    case 3: {
      setState(48);
      match(ExprParser::SUB);
      setState(49);
      expr(12);
      break;
    }

    case 4: {
      setState(50);
      func_call();
      break;
    }

    case 5: {
      setState(51);
      array_access();
      break;
    }

    case 6: {
      setState(52);
      match(ExprParser::ID);
      break;
    }

    case 7: {
      setState(53);
      literal();
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(85);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(83);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(56);

          if (!(precpred(_ctx, 14))) throw FailedPredicateException(this, "precpred(_ctx, 14)");
          setState(57);
          match(ExprParser::T__2);
          setState(58);
          expr(15);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(59);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(60);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << ExprParser::MUL)
            | (1ULL << ExprParser::DIV)
            | (1ULL << ExprParser::MOD))) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(61);
          expr(12);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(62);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(63);
          _la = _input->LA(1);
          if (!(_la == ExprParser::ADD

          || _la == ExprParser::SUB)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(64);
          expr(11);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(65);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(66);
          match(ExprParser::REL_OP);
          setState(67);
          expr(10);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(68);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(69);
          match(ExprParser::EQ_OP);
          setState(70);
          expr(9);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(71);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(72);
          match(ExprParser::AND);
          setState(73);
          expr(8);
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(74);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(75);
          match(ExprParser::OR);
          setState(76);
          expr(7);
          break;
        }

        case 8: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(77);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(78);
          match(ExprParser::T__3);
          setState(79);
          expr(0);
          setState(80);
          match(ExprParser::T__4);
          setState(81);
          expr(6);
          break;
        }

        } 
      }
      setState(87);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Assign_lineContext ------------------------------------------------------------------

ExprParser::Assign_lineContext::Assign_lineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Assign_lineContext::ID() {
  return getToken(ExprParser::ID, 0);
}

tree::TerminalNode* ExprParser::Assign_lineContext::ASSIGN_OP() {
  return getToken(ExprParser::ASSIGN_OP, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::Assign_lineContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::Assign_lineContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}


size_t ExprParser::Assign_lineContext::getRuleIndex() const {
  return ExprParser::RuleAssign_line;
}

void ExprParser::Assign_lineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign_line(this);
}

void ExprParser::Assign_lineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign_line(this);
}

ExprParser::Assign_lineContext* ExprParser::assign_line() {
  Assign_lineContext *_localctx = _tracker.createInstance<Assign_lineContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleAssign_line);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(ExprParser::ID);
    setState(93);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(89);
      match(ExprParser::T__5);
      setState(90);
      expr(0);
      setState(91);
      match(ExprParser::T__6);
      break;
    }

    }
    setState(99);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__5) {
      setState(95);
      match(ExprParser::T__5);
      setState(96);
      expr(0);
      setState(97);
      match(ExprParser::T__6);
    }
    setState(101);
    match(ExprParser::ASSIGN_OP);
    setState(102);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Code_blockContext ------------------------------------------------------------------

ExprParser::Code_blockContext::Code_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::LineContext *> ExprParser::Code_blockContext::line() {
  return getRuleContexts<ExprParser::LineContext>();
}

ExprParser::LineContext* ExprParser::Code_blockContext::line(size_t i) {
  return getRuleContext<ExprParser::LineContext>(i);
}

ExprParser::Ret_lineContext* ExprParser::Code_blockContext::ret_line() {
  return getRuleContext<ExprParser::Ret_lineContext>(0);
}


size_t ExprParser::Code_blockContext::getRuleIndex() const {
  return ExprParser::RuleCode_block;
}

void ExprParser::Code_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCode_block(this);
}

void ExprParser::Code_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCode_block(this);
}

ExprParser::Code_blockContext* ExprParser::code_block() {
  Code_blockContext *_localctx = _tracker.createInstance<Code_blockContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleCode_block);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(ExprParser::T__7);
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__0)
      | (1ULL << ExprParser::T__12)
      | (1ULL << ExprParser::T__13)
      | (1ULL << ExprParser::T__16)
      | (1ULL << ExprParser::T__18)
      | (1ULL << ExprParser::T__19)
      | (1ULL << ExprParser::T__22)
      | (1ULL << ExprParser::T__23)
      | (1ULL << ExprParser::VAR_TYPE)
      | (1ULL << ExprParser::NOT)
      | (1ULL << ExprParser::SUB)
      | (1ULL << ExprParser::ID)
      | (1ULL << ExprParser::BOOL)
      | (1ULL << ExprParser::FLOAT)
      | (1ULL << ExprParser::INT)
      | (1ULL << ExprParser::STRING))) != 0)) {
      setState(105);
      line();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__24) {
      setState(111);
      ret_line();
    }
    setState(115);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__8) {
      setState(114);
      match(ExprParser::T__8);
    }
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__9) {
      setState(117);
      match(ExprParser::T__9);
    }
    setState(120);
    match(ExprParser::T__10);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

ExprParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::DeclarationContext* ExprParser::LineContext::declaration() {
  return getRuleContext<ExprParser::DeclarationContext>(0);
}

ExprParser::ExprContext* ExprParser::LineContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::For_loopContext* ExprParser::LineContext::for_loop() {
  return getRuleContext<ExprParser::For_loopContext>(0);
}

ExprParser::While_loopContext* ExprParser::LineContext::while_loop() {
  return getRuleContext<ExprParser::While_loopContext>(0);
}

ExprParser::If_conditionContext* ExprParser::LineContext::if_condition() {
  return getRuleContext<ExprParser::If_conditionContext>(0);
}

ExprParser::Assign_lineContext* ExprParser::LineContext::assign_line() {
  return getRuleContext<ExprParser::Assign_lineContext>(0);
}

ExprParser::Stdin_lineContext* ExprParser::LineContext::stdin_line() {
  return getRuleContext<ExprParser::Stdin_lineContext>(0);
}


size_t ExprParser::LineContext::getRuleIndex() const {
  return ExprParser::RuleLine;
}

void ExprParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void ExprParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

ExprParser::LineContext* ExprParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(122);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(123);
      expr(0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(124);
      for_loop();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(125);
      while_loop();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(126);
      if_condition();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(127);
      assign_line();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(128);
      stdin_line();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

ExprParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::Var_defContext* ExprParser::DeclarationContext::var_def() {
  return getRuleContext<ExprParser::Var_defContext>(0);
}

ExprParser::Func_defContext* ExprParser::DeclarationContext::func_def() {
  return getRuleContext<ExprParser::Func_defContext>(0);
}


size_t ExprParser::DeclarationContext::getRuleIndex() const {
  return ExprParser::RuleDeclaration;
}

void ExprParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void ExprParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}

ExprParser::DeclarationContext* ExprParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(133);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::T__12:
      case ExprParser::VAR_TYPE: {
        enterOuterAlt(_localctx, 1);
        setState(131);
        var_def();
        break;
      }

      case ExprParser::T__13: {
        enterOuterAlt(_localctx, 2);
        setState(132);
        func_def();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_defContext ------------------------------------------------------------------

ExprParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Var_defContext::VAR_TYPE() {
  return getToken(ExprParser::VAR_TYPE, 0);
}

std::vector<ExprParser::Assign_lineContext *> ExprParser::Var_defContext::assign_line() {
  return getRuleContexts<ExprParser::Assign_lineContext>();
}

ExprParser::Assign_lineContext* ExprParser::Var_defContext::assign_line(size_t i) {
  return getRuleContext<ExprParser::Assign_lineContext>(i);
}

std::vector<tree::TerminalNode *> ExprParser::Var_defContext::ID() {
  return getTokens(ExprParser::ID);
}

tree::TerminalNode* ExprParser::Var_defContext::ID(size_t i) {
  return getToken(ExprParser::ID, i);
}

std::vector<tree::TerminalNode *> ExprParser::Var_defContext::INT() {
  return getTokens(ExprParser::INT);
}

tree::TerminalNode* ExprParser::Var_defContext::INT(size_t i) {
  return getToken(ExprParser::INT, i);
}


size_t ExprParser::Var_defContext::getRuleIndex() const {
  return ExprParser::RuleVar_def;
}

void ExprParser::Var_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_def(this);
}

void ExprParser::Var_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_def(this);
}

ExprParser::Var_defContext* ExprParser::var_def() {
  Var_defContext *_localctx = _tracker.createInstance<Var_defContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleVar_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(184);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::VAR_TYPE: {
        enterOuterAlt(_localctx, 1);
        setState(135);
        match(ExprParser::VAR_TYPE);
        setState(138);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
        case 1: {
          setState(136);
          assign_line();
          break;
        }

        case 2: {
          setState(137);
          match(ExprParser::ID);
          break;
        }

        }
        setState(147);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(140);
            match(ExprParser::T__11);
            setState(143);
            _errHandler->sync(this);
            switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
            case 1: {
              setState(141);
              assign_line();
              break;
            }

            case 2: {
              setState(142);
              match(ExprParser::ID);
              break;
            }

            } 
          }
          setState(149);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx);
        }
        break;
      }

      case ExprParser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(150);
        match(ExprParser::T__12);
        setState(151);
        match(ExprParser::VAR_TYPE);

        setState(152);
        match(ExprParser::ID);
        setState(153);
        match(ExprParser::T__5);
        setState(155);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ExprParser::ID

        || _la == ExprParser::INT) {
          setState(154);
          _la = _input->LA(1);
          if (!(_la == ExprParser::ID

          || _la == ExprParser::INT)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(157);
        match(ExprParser::T__6);
        setState(163);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ExprParser::T__5) {
          setState(158);
          match(ExprParser::T__5);
          setState(160);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == ExprParser::ID

          || _la == ExprParser::INT) {
            setState(159);
            _la = _input->LA(1);
            if (!(_la == ExprParser::ID

            || _la == ExprParser::INT)) {
            _errHandler->recoverInline(this);
            }
            else {
              _errHandler->reportMatch(this);
              consume();
            }
          }
          setState(162);
          match(ExprParser::T__6);
        }
        setState(181);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(165);
            match(ExprParser::T__11);
            setState(166);
            match(ExprParser::ID);
            setState(167);
            match(ExprParser::T__5);
            setState(169);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == ExprParser::ID

            || _la == ExprParser::INT) {
              setState(168);
              _la = _input->LA(1);
              if (!(_la == ExprParser::ID

              || _la == ExprParser::INT)) {
              _errHandler->recoverInline(this);
              }
              else {
                _errHandler->reportMatch(this);
                consume();
              }
            }
            setState(171);
            match(ExprParser::T__6);
            setState(177);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == ExprParser::T__5) {
              setState(172);
              match(ExprParser::T__5);
              setState(174);
              _errHandler->sync(this);

              _la = _input->LA(1);
              if (_la == ExprParser::ID

              || _la == ExprParser::INT) {
                setState(173);
                _la = _input->LA(1);
                if (!(_la == ExprParser::ID

                || _la == ExprParser::INT)) {
                _errHandler->recoverInline(this);
                }
                else {
                  _errHandler->reportMatch(this);
                  consume();
                }
              }
              setState(176);
              match(ExprParser::T__6);
            } 
          }
          setState(183);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_defContext ------------------------------------------------------------------

ExprParser::Func_defContext::Func_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::Func_defContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::Code_blockContext* ExprParser::Func_defContext::code_block() {
  return getRuleContext<ExprParser::Code_blockContext>(0);
}

tree::TerminalNode* ExprParser::Func_defContext::VAR_TYPE() {
  return getToken(ExprParser::VAR_TYPE, 0);
}

std::vector<ExprParser::Var_defContext *> ExprParser::Func_defContext::var_def() {
  return getRuleContexts<ExprParser::Var_defContext>();
}

ExprParser::Var_defContext* ExprParser::Func_defContext::var_def(size_t i) {
  return getRuleContext<ExprParser::Var_defContext>(i);
}


size_t ExprParser::Func_defContext::getRuleIndex() const {
  return ExprParser::RuleFunc_def;
}

void ExprParser::Func_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_def(this);
}

void ExprParser::Func_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExprListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_def(this);
}
